--- a/package.json
+++ b/package.json
@@ -7,25 +7,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-community/datetimepicker": "^6.7.3",
+    "@react-native-picker/picker": "^2.4.8",
+    "@react-navigation/native": "6.0.0",
+    "@react-navigation/stack": "*",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.13",
+    "expo-app-loading": "~2.1.1",
+    "expo-constants": "~14.2.1",
+    "expo-file-system": "~15.2.2",
     "expo-font": "~11.1.1",
     "expo-image": "~1.0.1",
+    "expo-image-picker": "~14.1.1",
     "expo-speech": "~11.1.1",
-    "expo-constants": "~14.2.1",
-    "expo-app-loading": "~2.1.1",
-    "@expo/vector-icons": "^13.0.0",
     "expo-splash-screen": "~0.18.2",
-    "react-native-paper": "3.6.0",
-    "react-native-swiper": "1.6.0",
-    "react-native-screens": "~3.20.0",
-    "@react-navigation/stack": "*",
-    "@react-navigation/native": "6.0.0",
-    "react-native-vector-icons": "*",
+    "expo-status-bar": "~1.4.4",
+    "firebase": "^10.5.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.14",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-safe-area-context": "4.5.0"
+    "react-native-image-picker": "^7.0.2",
+    "react-native-paper": "3.6.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-swiper": "1.6.0",
+    "react-native-vector-icons": "*",
+    "react-native-web": "~0.18.10",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
